# q_api-users

./: Cargo.toml  Containerfile  README.md  Rocket.toml  benchmark.yml  build.sh  compose.yaml  init.sql  rest.http  rustfmt.toml
src/: main.rs  test.rs
src/app/: routing.rs  server.rs
src/app/modules/: mod.rs  routing.rs
src/app/modules/roles/: model.rs
src/app/modules/roles/services/: repository.rs
src/app/modules/user_project/: model.rs
src/app/modules/user_project/services/: repository.rs
src/app/modules/users/: controller.rs  mod.rs  model.rs
src/app/modules/users/handlers/: create.rs  helper.rs  index.rs  mod.rs  patch.rs  show.rs  update.rs
src/app/modules/users/services/: claims.rs  mod.rs  repository.rs
src/app/providers/: config_getter.rs  constants.rs  cors.rs  mod.rs
src/app/providers/guards/: claims.rs
src/app/providers/interfaces/: answer.rs  fcm.rs  mod.rs  paper.rs  project.rs  resource.rs  slide.rs
src/app/providers/interfaces/helpers/: claims.rs  config_getter.rs  cron.rs  fetch.rs  mod.rs  token.rs
src/app/providers/models/: answer.rs  cronjob.rs  fcm.rs  message.rs  mod.rs  paper.rs  project.rs  question.rs  record.rs  resource.rs  slide.rs  user.rs
src/app/providers/services/: claims.rs  cron.rs  fetch.rs  mod.rs  token.rs
src/config/: database.rs
src/database/: connection.rs  mod.rs  schema.rs
src/database/migrations/: 20231027114534_prueba.down.sql  20231027114534_prueba.up.sql  20231031110800_update_function.down.sql  20231031110800_update_function.up.sql  20231031110802_create_roles.down.sql  20231031110802_create_roles.up.sql  20231031110805_create_users.up.sql
src/database/migrations/2023-03-12-182734_create_roles/: down.sql  up.sql
src/database/migrations/2023-03-12-182737_create_users/: down.sql  up.sql
src/database/migrations/2023-05-09-150943_create_user_project/: down.sql  up.sql
