[package]
name = "q-api-users"
version = "0.1.7"
edition = "2021"

[features]
default   = ["db_sqlx", "fetch"]

cron      = ["escalon-jobs", "tokio-cron-scheduler", "reqwest", "openssl/vendored"]
db_diesel = ["diesel", "diesel_migrations", "rocket_sync_db_pools", "openssl"]
db_sqlx   = ["sqlx", "rocket_db_pools"]
fetch     = ["reqwest", "openssl/vendored"]
push      = ["web-push-native", "base64ct", "hyper", "hyper-rustls"]

[profile.release]
lto       = true
opt-level = 3
strip     = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2", features = ["postgres", "chrono", "serde_json", "uuid"], optional = true }
diesel_migrations = { version = "2", features = ["postgres"], optional = true }
escalon-jobs = { version = "0.1.6", optional = true }
jsonwebtoken = "8.2.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], optional = true }
rocket = { version = "0.5.0", features = ["json", "secrets", "uuid"] }
rocket_db_pools = { version = "0.1.0", features = ["sqlx_postgres"], optional = true }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_postgres_pool"], optional = true }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", default-features = false, features = ["macros", "migrate", "time", "chrono", "json", "uuid"], optional = true }
tokio-cron-scheduler = { version = "*", optional = true }

openssl = { version = "*", optional = true } # musl on diesel and reqwest

uuid = { version = "1.3.0", features = ["v4"] } # user

web-push-native = { version = "0.2.0", optional = true}
base64ct = { version = "1.6.0", optional = true }
hyper = { version = "0.14.27", optional = true }
hyper-rustls = { version = "0.24.1", optional = true }
